Change deployment branch from 'main' to 'master'

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   # Trigger workflow saat ada push ke branch "main"
   push:
     branches:
-      - main
+      - master
 
   # Mengizinkan deploy manual dari tab Actions di GitHub
   workflow_dispatch:
